[package]
name = "jinya-ui"
version = "1.0.5"
authors = ["Imanuel Ulbricht <imanuel.ulbricht@jinya.de"]
edition = "2018"
license = "MIT"
description = "Jinya UI is a modern UI library for the yew framework"
repository = "https://github.com/Jinya-CMS/jinya-ui"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17.2"
yew-router = "0.14.0"
http = "0.2.1"
anyhow = "1.0.31"
js-sys = "0.3.41"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
gloo-timers = "0.2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'MouseEvent',
  'EventTarget',
  'Event',
  'File',
  'DragEvent',
  'DataTransfer',
  'Element',
]
